レビュー修正(ログイン・ログアウト)

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,16 @@
   <header class="mb-3">
     <nav>
       <ul>
+
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+        <li><a href="{% url 'tweets:home' %}">Home</a></li>
+        {% else %}
+        <li><a href="{% url 'accounts:login' %}">Login</a></li>
         <li><a href="{% url 'welcome:welcome' %}">Twitter Clone</a></li>
         <li><a href="{% url 'accounts:signup' %}">Sign up</a></li>
+        {% endif %}
+
       </ul>
     </nav>
   </header>
